org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/ShadowingTests_ImportAndInnerClassesNamesAreTheSameBadCase1.alf.xt
//* 
XPECT_SETUP org.omg.sysml.xpect.tests.testsuite.SysMLXtextTest
	ResourceSet {
		ThisFile {}
		File {from ="/library/Base.alf"}
		File {from ="/src/DependencyOuterPackage.alf"}
	}
	Workspace {
		JavaProject {
			SrcFolder {
				ThisFile {}
				File {from ="/library/Base.alf"}
				File {from ="/src/DependencyOuterPackage.alf"}
			}
		}
	}
END_SETUP 
*/

package test{
	import OuterPackage::*;
	class A{
		class a2{}
	}
	// XPECT errors --> "Couldn't resolve reference to Classifier 'A::a1'." at "A::a1"
	class B specializes A::a1 {} 
}
